--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-web": "~0.19.13",
-    "react-native-webview": "13.12.5"
+    "react-native-webview": "13.12.5",
+    "wanakana": "^5.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -52,8 +53,8 @@
     "jest": "^29.2.1",
     "jest-expo": "~52.0.4",
     "react-test-renderer": "18.3.1",
-    "typescript": "^5.3.3",
-    "sqlite3": "5.1.7"
+    "sqlite3": "5.1.7",
+    "typescript": "^5.3.3"
   },
   "private": true
 }
