--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "build": "eas build --platform ios",
+    "build:preview": "eas build -p ios --profile preview"
   },
   "jest": {
     "preset": "jest-expo"
@@ -41,6 +43,7 @@
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
+    "react-native-uitextview": "^1.4.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
     "wanakana": "^5.3.1"
