--- a/app.json
+++ b/app.json
@@ -4,12 +4,15 @@
     "slug": "jisho",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/icon.png",
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
     "ios": {
-      "supportsTablet": true,
+      "ios": {
+        "bundleIdentifier": "app.jisho.loc",
+        "buildNumber": "3"
+      },
+      "supportsTablet": false,
       "bundleIdentifier": "app.jisho.loc",
       "infoPlist": {
         "ITSAppUsesNonExemptEncryption": false
@@ -27,19 +30,7 @@
       "output": "static",
       "favicon": "./assets/images/favicon.png"
     },
-    "plugins": [
-      "expo-router",
-      [
-        "expo-splash-screen",
-        {
-          "image": "./assets/images/splash-icon.png",
-          "imageWidth": 200,
-          "resizeMode": "contain",
-          "backgroundColor": "#ffffff"
-        }
-      ],
-      "expo-sqlite"
-    ],
+    "plugins": ["expo-router", ["expo-splash-screen"], "expo-sqlite"],
     "experiments": {
       "typedRoutes": true
     },
