--- a/package.json
+++ b/package.json
@@ -61,5 +61,6 @@
     "sqlite3": "5.1.7",
     "typescript": "^5.3.3"
   },
-  "private": true
+  "private": true,
+  "packageManager": "yarn@1.22.19+sha1.4ba7fc5c6e704fce2066ecbfb0b0d8976fe62447"
 }
