--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
     "initdb": "node ./scripts/init_db.js",
+    "initex": "node ./scripts/examples_format.js",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
