--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@react-navigation/native": "^7.0.14",
     "expo": "~52.0.37",
     "expo-blur": "~14.0.3",
+    "expo-clipboard": "~7.0.1",
     "expo-constants": "~17.0.7",
     "expo-file-system": "~18.0.11",
     "expo-font": "~13.0.4",
@@ -42,14 +43,14 @@
     "react-native": "0.76.7",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-markdown-display": "^7.0.2",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-uitextview": "^1.4.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
-    "wanakana": "^5.3.1",
-    "expo-clipboard": "~7.0.1"
+    "wanakana": "^5.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
