examples copy handler

--- a/app.json
+++ b/app.json
@@ -31,12 +31,7 @@
       "expo-router",
       "expo-splash-screen",
       "expo-sqlite",
-      [
-        "expo-audio",
-        {
-          "microphonePermission": "Allow $(PRODUCT_NAME) to access your microphone."
-        }
-      ]
+      "expo-audio"
     ],
     "experiments": {
       "typedRoutes": true
