--- a/ios/jisho/Info.plist
+++ b/ios/jisho/Info.plist
@@ -79,5 +79,12 @@
 	<string>Allow $(PRODUCT_NAME) to access your microphone.</string>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<false/>
+<key>UIBackgroundModes</key>
+    <array>
+        <string>audio</string>
+    </array>
+
+    <key>AVAudioSessionCategoryOptions</key>
+    <integer>1</integer>
 </dict>
 </plist>
