--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/elements": "^2.2.5",
     "@react-navigation/native": "^7.0.14",
-    "@tanstack/react-query": "^5.68.0",
+    "@tanstack/react-query": "5.70.0",
     "expo": "~52.0.37",
     "expo-audio": "~0.3.5",
     "expo-blur": "~14.0.3",
@@ -66,14 +66,11 @@
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@tanstack/eslint-plugin-query": "^5.68.0",
-    "@types/jest": "^29.5.12",
     "@types/react": "~18.3.12",
-    "@types/react-test-renderer": "^18.3.0",
+    "csv-parser": "^3.2.0",
     "iconv-lite": "^0.6.3",
-    "jest": "^29.2.1",
-    "jest-expo": "~52.0.4",
     "react-test-renderer": "18.3.1",
-    "sqlite3": "5.1.7",
+    "sqlite3": "^5.1.7",
     "typescript": "^5.3.3"
   },
   "private": true,
