--- a/package.json
+++ b/package.json
@@ -20,53 +20,53 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.4",
-    "@react-navigation/bottom-tabs": "^7.3.10",
+    "@expo/vector-icons": "^14.1.0",
+    "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/elements": "^2.3.8",
-    "@react-navigation/native": "^7.1.6",
+    "@react-navigation/native": "^7.0.14",
     "@tanstack/react-query": "5.72.2",
-    "expo": "~52.0.44",
-    "expo-audio": "~0.3.5",
-    "expo-blur": "~14.0.3",
-    "expo-clipboard": "~7.0.1",
-    "expo-constants": "~17.0.8",
-    "expo-document-picker": "~13.0.3",
-    "expo-file-system": "~18.0.12",
-    "expo-font": "~13.0.4",
-    "expo-haptics": "~14.0.1",
-    "expo-linking": "~7.0.5",
-    "expo-network": "~7.0.5",
-    "expo-router": "~4.0.20",
-    "expo-sharing": "~13.0.1",
-    "expo-speech": "~13.0.1",
-    "expo-splash-screen": "~0.29.22",
-    "expo-sqlite": "~15.1.4",
-    "expo-status-bar": "~2.0.1",
-    "expo-symbols": "~0.2.2",
-    "expo-system-ui": "~4.0.9",
-    "expo-web-browser": "~14.0.2",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
-    "react-native": "~0.77.2",
+    "expo": "^53.0.0-preview.5",
+    "expo-audio": "~0.4.1",
+    "expo-blur": "~14.1.1",
+    "expo-clipboard": "~7.1.1",
+    "expo-constants": "~17.1.1",
+    "expo-document-picker": "~13.1.1",
+    "expo-file-system": "~18.1.3",
+    "expo-font": "~13.1.1",
+    "expo-haptics": "~14.1.1",
+    "expo-linking": "~7.1.1",
+    "expo-network": "~7.1.2",
+    "expo-router": "~5.0.2-preview.3",
+    "expo-sharing": "~13.1.2",
+    "expo-speech": "~13.1.3",
+    "expo-splash-screen": "~0.30.2",
+    "expo-sqlite": "~15.2.4",
+    "expo-status-bar": "~2.2.0",
+    "expo-symbols": "~0.4.1",
+    "expo-system-ui": "~5.0.2",
+    "expo-web-browser": "~14.1.2",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
+    "react-native": "0.79.0",
     "react-native-context-menu-view": "^1.18.0",
-    "react-native-gesture-handler": "~2.25.0",
+    "react-native-gesture-handler": "~2.24.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-keyboard-controller": "^1.17.0",
     "react-native-markdown-display": "^7.0.2",
     "react-native-mmkv": "^3.2.0",
     "react-native-reanimated": "~3.17.3",
-    "react-native-safe-area-context": "~5.3.0",
+    "react-native-safe-area-context": "5.3.0",
     "react-native-screens": "~4.10.0",
     "react-native-uitextview": "^1.4.0",
-    "react-native-web": "~0.20.0",
-    "react-native-webview": "~13.13.5",
+    "react-native-web": "^0.20.0",
+    "react-native-webview": "13.13.5",
     "tiny-segmenter": "^0.2.0",
     "wanakana": "^5.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.26.10",
     "@tanstack/eslint-plugin-query": "^5.72.2",
-    "@types/react": "~18.3.20",
+    "@types/react": "~19.0.10",
     "csv-parser": "^3.2.0",
     "iconv-lite": "^0.6.3",
     "react-test-renderer": "18.3.1",
@@ -74,5 +74,5 @@
     "typescript": "^5.8.3"
   },
   "private": true,
-  "packageManager": "yarn@4.8.1"
+  "packageManager": "yarn@4.9.1"
 }
