--- a/package.json
+++ b/package.json
@@ -21,55 +21,49 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
-    "@react-navigation/bottom-tabs": "^7.2.0",
-    "@react-navigation/elements": "^2.3.8",
-    "@react-navigation/native": "^7.0.14",
-    "@tanstack/react-query": "5.74.4",
-    "expo": "^53.0.0-preview.5",
-    "expo-audio": "~0.4.1",
-    "expo-blur": "~14.1.1",
-    "expo-clipboard": "~7.1.1",
-    "expo-constants": "~17.1.1",
-    "expo-document-picker": "~13.1.1",
-    "expo-file-system": "~18.1.3",
-    "expo-font": "~13.1.1",
-    "expo-haptics": "~14.1.1",
-    "expo-linking": "~7.1.1",
-    "expo-network": "~7.1.2",
-    "expo-router": "~5.0.2-preview.3",
-    "expo-sharing": "~13.1.2",
-    "expo-speech": "~13.1.3",
-    "expo-splash-screen": "~0.30.2",
-    "expo-sqlite": "~15.2.4",
-    "expo-status-bar": "~2.2.0",
-    "expo-symbols": "~0.4.1",
-    "expo-system-ui": "~5.0.2",
-    "expo-web-browser": "~14.1.2",
+    "@react-navigation/bottom-tabs": "^7.3.10",
+    "@react-navigation/elements": "^2.4.1",
+    "@react-navigation/native": "^7.1.6",
+    "@tanstack/react-query": "5.75.7",
+    "expo": "^53.0.9",
+    "expo-audio": "~0.4.5",
+    "expo-blur": "~14.1.4",
+    "expo-clipboard": "~7.1.4",
+    "expo-constants": "~17.1.6",
+    "expo-font": "~13.3.1",
+    "expo-haptics": "~14.1.4",
+    "expo-linking": "~7.1.4",
+    "expo-network": "~7.1.5",
+    "expo-router": "~5.0.6",
+    "expo-speech": "~13.1.7",
+    "expo-splash-screen": "~0.30.8",
+    "expo-sqlite": "~15.2.10",
+    "expo-status-bar": "~2.2.3",
+    "expo-symbols": "~0.4.4",
+    "expo-system-ui": "~5.0.7",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-native": "0.79.0",
-    "react-native-context-menu-view": "^1.18.0",
+    "react-native": "0.79.2",
+    "react-native-context-menu-view": "^1.19.0",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-keyboard-controller": "^1.17.1",
     "react-native-markdown-display": "^7.0.2",
     "react-native-mmkv": "^3.2.0",
     "react-native-reanimated": "~3.17.5",
-    "react-native-safe-area-context": "5.3.0",
+    "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
-    "react-native-uitextview": "^1.4.0",
-    "react-native-web": "^0.20.0",
-    "react-native-webview": "13.13.5",
+    "react-native-uitextview": "^2.0.3",
     "tiny-segmenter": "^0.2.0",
     "wanakana": "^5.3.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.26.10",
-    "@tanstack/eslint-plugin-query": "^5.73.3",
+    "@babel/core": "^7.27.1",
+    "@tanstack/eslint-plugin-query": "^5.74.7",
     "@types/react": "~19.0.10",
     "csv-parser": "^3.2.0",
     "iconv-lite": "^0.6.3",
-    "react-test-renderer": "18.3.1",
+    "react-test-renderer": "19.1.0",
     "sqlite3": "^5.1.7",
     "typescript": "^5.8.3"
   },
