--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-dom": "19.0.0",
     "react-native": "0.79.2",
     "react-native-context-menu-view": "^1.19.0",
+    "react-native-executorch": "^0.4.2",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-keyboard-controller": "^1.17.1",
