local examples gen

--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.4.1",
     "@react-navigation/native": "^7.1.6",
-    "@tanstack/react-query": "5.75.7",
-    "expo": "^53.0.9",
-    "expo-audio": "~0.4.5",
-    "expo-blur": "~14.1.4",
+    "@tanstack/react-query": "5.80.6",
+    "expo": "53.0.10",
+    "expo-audio": "~0.4.6",
+    "expo-blur": "~14.1.5",
     "expo-clipboard": "~7.1.4",
     "expo-constants": "~17.1.6",
     "expo-font": "~13.3.1",
@@ -36,24 +36,24 @@
     "expo-network": "~7.1.5",
     "expo-router": "~5.0.6",
     "expo-speech": "~13.1.7",
-    "expo-splash-screen": "~0.30.8",
-    "expo-sqlite": "~15.2.10",
+    "expo-splash-screen": "~0.30.9",
+    "expo-sqlite": "~15.2.11",
     "expo-status-bar": "~2.2.3",
-    "expo-symbols": "~0.4.4",
-    "expo-system-ui": "~5.0.7",
+    "expo-symbols": "~0.4.5",
+    "expo-system-ui": "~5.0.8",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-native": "0.79.2",
+    "react-native": "0.79.3",
     "react-native-context-menu-view": "^1.19.0",
-    "react-native-executorch": "^0.4.2",
+    "react-native-executorch": "^0.4.3",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
-    "react-native-keyboard-controller": "^1.17.1",
+    "react-native-keyboard-controller": "^1.17.3",
     "react-native-markdown-display": "^7.0.2",
     "react-native-mmkv": "^3.2.0",
     "react-native-reanimated": "~3.17.5",
     "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.10.0",
+    "react-native-screens": "~4.11.1",
     "react-native-uitextview": "^2.0.3",
     "tiny-segmenter": "^0.2.0",
     "wanakana": "^5.3.1"
