--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.4.1",
     "@react-navigation/native": "^7.1.6",
-    "@tanstack/react-query": "5.80.6",
-    "expo": "53.0.10",
-    "expo-audio": "~0.4.6",
+    "@tanstack/react-query": "5.81.5",
+    "expo": "53.0.13",
+    "expo-audio": "~0.4.7",
     "expo-blur": "~14.1.5",
     "expo-clipboard": "~7.1.4",
     "expo-constants": "~17.1.6",
@@ -34,33 +34,33 @@
     "expo-haptics": "~14.1.4",
     "expo-linking": "~7.1.4",
     "expo-network": "~7.1.5",
-    "expo-router": "~5.0.6",
+    "expo-router": "~5.1.1",
     "expo-speech": "~13.1.7",
     "expo-splash-screen": "~0.30.9",
-    "expo-sqlite": "~15.2.11",
+    "expo-sqlite": "~15.2.12",
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.5",
-    "expo-system-ui": "~5.0.8",
+    "expo-system-ui": "~5.0.9",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-native": "0.79.3",
+    "react-native": "0.79.4",
     "react-native-context-menu-view": "^1.19.0",
-    "react-native-executorch": "^0.4.3",
+    "react-native-executorch": "^0.4.6",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
-    "react-native-keyboard-controller": "^1.17.3",
+    "react-native-keyboard-controller": "^1.17.5",
     "react-native-markdown-display": "^7.0.2",
-    "react-native-mmkv": "^3.2.0",
+    "react-native-mmkv": "^3.3.0",
     "react-native-reanimated": "~3.17.5",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
-    "react-native-uitextview": "^2.0.3",
+    "react-native-uitextview": "^2.1.0-rc.0",
     "tiny-segmenter": "^0.2.0",
     "wanakana": "^5.3.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.27.1",
-    "@tanstack/eslint-plugin-query": "^5.74.7",
+    "@babel/core": "^7.27.7",
+    "@tanstack/eslint-plugin-query": "^5.81.2",
     "@types/react": "~19.0.10",
     "csv-parser": "^3.2.0",
     "iconv-lite": "^0.6.3",
