search handler upd

--- a/package.json
+++ b/package.json
@@ -63,11 +63,13 @@
     "@tanstack/eslint-plugin-query": "^5.81.2",
     "@types/react": "~19.0.10",
     "csv-parser": "^3.2.0",
+    "eslint": "^9.0.0",
+    "eslint-config-expo": "~9.2.0",
     "iconv-lite": "^0.6.3",
     "react-test-renderer": "19.1.0",
     "sqlite3": "^5.1.7",
     "typescript": "^5.8.3"
   },
   "private": true,
-  "packageManager": "yarn@4.9.1"
+  "packageManager": "yarn@4.9.1+sha512.f95ce356460e05be48d66401c1ae64ef84d163dd689964962c6888a9810865e39097a5e9de748876c2e0bf89b232d583c33982773e9903ae7a76257270986538"
 }
