--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "@react-navigation/native": "^7.1.6",
     "@shopify/flash-list": "1.7.6",
     "@tanstack/react-query": "5.83.0",
-    "expo": "53.0.19",
+    "expo": "53.0.20",
     "expo-audio": "~0.4.8",
     "expo-blur": "~14.1.5",
     "expo-clipboard": "~7.1.5",
@@ -91,7 +91,7 @@
     "ts-jest": "^29.4.0",
     "ts-node": "10.9.2",
     "tsx": "^4.20.3",
-    "typescript": "^5.8.3"
+    "typescript": "~5.8.3"
   },
   "private": true,
   "packageManager": "yarn@4.9.2"
