--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "db:reset": "tsx scripts/migrate.ts --reset",
     "db:stats": "tsx scripts/migrate.ts --stats",
     "db:verify": "tsx scripts/migrate.ts --verify",
+    "frequency:update": "node scripts/update-frequency-scores.js",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
