--- a/package.json
+++ b/package.json
@@ -34,58 +34,59 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.1.0",
+    "@expo/vector-icons": "^15.0.2",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.4.1",
     "@react-navigation/native": "^7.1.6",
     "@shopify/flash-list": "2.0.2",
-    "@tanstack/react-query": "5.84.2",
-    "expo": "53.0.20",
-    "expo-audio": "~0.4.8",
-    "expo-blur": "~14.1.5",
-    "expo-clipboard": "~7.1.5",
-    "expo-constants": "~17.1.7",
-    "expo-font": "~13.3.2",
-    "expo-haptics": "~14.1.4",
-    "expo-linking": "~7.1.7",
-    "expo-network": "~7.1.5",
-    "expo-router": "~5.1.3",
-    "expo-speech": "~13.1.7",
-    "expo-splash-screen": "~0.30.10",
-    "expo-sqlite": "~15.2.14",
-    "expo-status-bar": "~2.2.3",
-    "expo-symbols": "~0.4.5",
-    "expo-system-ui": "~5.0.10",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "react-native": "0.79.5",
+    "@tanstack/react-query": "5.87.1",
+    "expo": "^54.0.6",
+    "expo-audio": "~1.0.11",
+    "expo-blur": "~15.0.7",
+    "expo-clipboard": "~8.0.7",
+    "expo-constants": "~18.0.8",
+    "expo-font": "~14.0.8",
+    "expo-haptics": "~15.0.7",
+    "expo-linking": "~8.0.8",
+    "expo-network": "~8.0.7",
+    "expo-router": "~6.0.3",
+    "expo-speech": "~14.0.7",
+    "expo-splash-screen": "~31.0.10",
+    "expo-sqlite": "~16.0.8",
+    "expo-status-bar": "~3.0.8",
+    "expo-symbols": "~1.0.7",
+    "expo-system-ui": "~6.0.7",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-native": "0.81.4",
     "react-native-context-menu-view": "^1.19.0",
-    "react-native-executorch": "^0.4.8",
-    "react-native-gesture-handler": "~2.24.0",
+    "react-native-executorch": "^0.5.4",
+    "react-native-gesture-handler": "~2.28.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
-    "react-native-keyboard-controller": "^1.18.4",
+    "react-native-keyboard-controller": "1.18.5",
     "react-native-markdown-display": "^7.0.2",
-    "react-native-mmkv": "^3.3.0",
-    "react-native-reanimated": "~3.17.5",
-    "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.11.1",
+    "react-native-mmkv": "^3.3.1",
+    "react-native-reanimated": "~4.1.0",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
     "react-native-uitextview": "^2.1.0-rc.0",
+    "react-native-worklets": "0.5.1",
     "tiny-segmenter": "^0.2.0",
     "wanakana": "^5.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.28.0",
-    "@tanstack/eslint-plugin-query": "^5.83.1",
+    "@tanstack/eslint-plugin-query": "^5.86.0",
     "@types/better-sqlite3": "7.6.13",
     "@types/jest": "^30.0.0",
-    "@types/react": "~19.0.10",
+    "@types/react": "~19.1.10",
     "better-sqlite3": "12.2.0",
     "csv-parser": "^3.2.0",
     "eslint": "^9.33.0",
-    "eslint-config-expo": "~9.2.0",
+    "eslint-config-expo": "~10.0.0",
     "iconv-lite": "^0.6.3",
-    "jest": "~30.0.5",
-    "jest-expo": "~53.0.9",
+    "jest": "~29.7.0",
+    "jest-expo": "~54.0.11",
     "react-test-renderer": "19.1.0",
     "sqlite3": "^5.1.7",
     "ts-jest": "^29.4.1",
