--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@babel/runtime": "^7.28.4",
+    "@expo/metro-runtime": "^6.1.2",
     "@expo/vector-icons": "^15.0.2",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.4.1",
@@ -60,7 +62,7 @@
     "react-dom": "19.1.0",
     "react-native": "0.81.4",
     "react-native-context-menu-view": "^1.19.0",
-    "react-native-executorch": "^0.5.4",
+    "react-native-executorch": "0.5.3",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-keyboard-controller": "1.18.5",
