--- a/package.json
+++ b/package.json
@@ -36,12 +36,16 @@
   "dependencies": {
     "@babel/runtime": "^7.28.4",
     "@expo/metro-runtime": "^6.1.2",
+    "@expo/ui": "~0.2.0-beta.2",
     "@expo/vector-icons": "^15.0.2",
+    "@react-native-ai/apple": "^0.1.0",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.4.1",
     "@react-navigation/native": "^7.1.6",
     "@shopify/flash-list": "2.0.2",
     "@tanstack/react-query": "5.87.1",
+    "ai": "^5.0.0",
+    "eventsource-parser": "^1.1.2",
     "expo": "^54.0.6",
     "expo-audio": "~1.0.11",
     "expo-blur": "~15.0.7",
@@ -61,8 +65,6 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.4",
-    "react-native-context-menu-view": "^1.19.0",
-    "react-native-executorch": "0.5.3",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-keyboard-controller": "1.18.5",
@@ -72,6 +74,7 @@
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
     "react-native-uitextview": "^2.1.0-rc.0",
+    "react-native-url-polyfill": "^2.0.0",
     "react-native-worklets": "0.5.1",
     "tiny-segmenter": "^0.2.0",
     "wanakana": "^5.3.1"
@@ -97,5 +100,5 @@
     "typescript": "~5.9.2"
   },
   "private": true,
-  "packageManager": "yarn@4.9.2"
+  "packageManager": "yarn@4.9.4"
 }
