--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "@tanstack/react-query": "5.87.1",
     "ai": "^5.0.0",
     "eventsource-parser": "^1.1.2",
-    "expo": "^54.0.6",
+    "expo": "54.0.7",
     "expo-audio": "~1.0.11",
     "expo-blur": "~15.0.7",
     "expo-clipboard": "~8.0.7",
@@ -55,7 +55,7 @@
     "expo-haptics": "~15.0.7",
     "expo-linking": "~8.0.8",
     "expo-network": "~8.0.7",
-    "expo-router": "~6.0.3",
+    "expo-router": "~6.0.4",
     "expo-speech": "~14.0.7",
     "expo-splash-screen": "~31.0.10",
     "expo-sqlite": "~16.0.8",
