--- a/package.json
+++ b/package.json
@@ -44,10 +44,10 @@
     "@react-navigation/native": "^7.1.6",
     "@shopify/flash-list": "2.0.2",
     "@tanstack/react-query": "5.89.0",
-    "ai": "^5.0.44",
+    "ai": "^5.1.0-beta.4",
     "eventsource-parser": "^1.1.2",
     "expo": "54.0.8",
-    "expo-audio": "~1.0.12",
+    "expo-audio": "~1.0.13",
     "expo-blur": "~15.0.7",
     "expo-clipboard": "~8.0.7",
     "expo-constants": "~18.0.9",
@@ -55,7 +55,7 @@
     "expo-haptics": "~15.0.7",
     "expo-linking": "~8.0.8",
     "expo-network": "~8.0.7",
-    "expo-router": "~6.0.6",
+    "expo-router": "~6.0.7",
     "expo-speech": "~14.0.7",
     "expo-splash-screen": "~31.0.10",
     "expo-sqlite": "~16.0.8",
@@ -77,7 +77,8 @@
     "react-native-url-polyfill": "^2.0.0",
     "react-native-worklets": "0.5.1",
     "tiny-segmenter": "^0.2.0",
-    "wanakana": "^5.3.1"
+    "wanakana": "^5.3.1",
+    "zod": "^4.1.9"
   },
   "devDependencies": {
     "@babel/core": "^7.28.0",
@@ -91,7 +92,7 @@
     "eslint-config-expo": "~10.0.0",
     "iconv-lite": "^0.6.3",
     "jest": "~29.7.0",
-    "jest-expo": "~54.0.11",
+    "jest-expo": "~54.0.12",
     "react-test-renderer": "19.1.0",
     "sqlite3": "^5.1.7",
     "ts-jest": "^29.4.1",
