--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "expo-clipboard": "~8.0.7",
     "expo-constants": "~18.0.9",
     "expo-font": "~14.0.8",
+    "expo-glass-effect": "~0.1.4",
     "expo-haptics": "~15.0.7",
     "expo-linking": "~8.0.8",
     "expo-network": "~8.0.7",
