--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "db:create": "tsx scripts/migrate.ts --create",
     "db:import": "tsx scripts/migrate.ts --import",
     "db:import:words": "tsx scripts/migrate.ts --import-words",
+    "db:import:furigana": "tsx scripts/migrate.ts --import-furigana",
+    "db:import:examples": "tsx scripts/migrate.ts --import-examples",
+    "db:build": "tsx scripts/build-database.ts",
     "db:reset": "tsx scripts/migrate.ts --reset",
     "db:stats": "tsx scripts/migrate.ts --stats",
     "db:verify": "tsx scripts/migrate.ts --verify",
@@ -20,7 +23,6 @@
     "test": "jest --watchAll",
     "test:search": "jest __tests__/search.test.ts --config jest.config.node.js --watchAll=false --verbose",
     "test:dictionary": "jest __tests__/dictionary.test.ts --config jest.config.node.js --watchAll=false --verbose",
-    "test:bookmarks": "jest __tests__/bookmarks.test.ts --config jest.config.node.js --watchAll=false --verbose",
     "test:history": "jest __tests__/history.test.ts --config jest.config.node.js --watchAll=false --verbose",
     "test:kanji": "jest __tests__/kanji.test.ts --config jest.config.node.js --watchAll=false --verbose",
     "test:utils": "jest __tests__/database-utils.test.ts --config jest.config.node.js --watchAll=false --verbose",
@@ -87,6 +89,7 @@
     "@types/better-sqlite3": "7.6.13",
     "@types/jest": "^30.0.0",
     "@types/react": "~19.1.10",
+    "JSONStream": "^1.3.5",
     "better-sqlite3": "12.2.0",
     "csv-parser": "^3.2.0",
     "eslint": "^9.33.0",
