--- a/package.json
+++ b/package.json
@@ -102,7 +102,8 @@
     "ts-jest": "^29.4.1",
     "ts-node": "10.9.2",
     "tsx": "^4.20.3",
-    "typescript": "~5.9.2"
+    "typescript": "~5.9.2",
+    "wrangler": "^4.40.2"
   },
   "private": true,
   "packageManager": "yarn@4.10.2"
