--- a/package.json
+++ b/package.json
@@ -42,13 +42,13 @@
     "@expo/metro-runtime": "^6.1.2",
     "@expo/ui": "~0.2.0-beta.2",
     "@expo/vector-icons": "^15.0.2",
-    "@react-native-ai/apple": "^0.9.0",
+    "@react-native-ai/apple": "^0.10.0",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.4.1",
     "@react-navigation/native": "^7.1.6",
     "@shopify/flash-list": "2.0.2",
-    "@tanstack/react-query": "5.89.0",
-    "ai": "^5.1.0-beta.4",
+    "@tanstack/react-query": "5.90.2",
+    "ai": "^5.0.63",
     "eventsource-parser": "^1.1.2",
     "expo": "~54.0.10",
     "expo-audio": "~1.0.13",
@@ -74,8 +74,9 @@
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-keyboard-controller": "1.18.5",
     "react-native-markdown-display": "^7.0.2",
-    "react-native-mmkv": "^3.3.1",
+    "react-native-mmkv": "^3.3.3",
     "react-native-purchases": "^9.5.3",
+    "react-native-purchases-ui": "^9.5.3",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
@@ -84,16 +85,16 @@
     "react-native-worklets": "0.5.1",
     "tiny-segmenter": "^0.2.0",
     "wanakana": "^5.3.1",
-    "zod": "^4.1.9"
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@babel/core": "^7.28.0",
-    "@tanstack/eslint-plugin-query": "^5.89.0",
+    "@tanstack/eslint-plugin-query": "^5.91.0",
     "@types/better-sqlite3": "7.6.13",
     "@types/jest": "^30.0.0",
     "@types/react": "~19.1.10",
     "JSONStream": "^1.3.5",
-    "better-sqlite3": "12.2.0",
+    "better-sqlite3": "12.4.1",
     "csv-parser": "^3.2.0",
     "eslint": "^9.33.0",
     "eslint-config-expo": "~10.0.0",
@@ -106,7 +107,7 @@
     "ts-node": "10.9.2",
     "tsx": "^4.20.3",
     "typescript": "~5.9.2",
-    "wrangler": "^4.40.2"
+    "wrangler": "^4.42.1"
   },
   "private": true,
   "packageManager": "yarn@4.10.2"
