--- a/package.json
+++ b/package.json
@@ -50,17 +50,17 @@
     "@tanstack/react-query": "5.90.2",
     "ai": "^5.0.63",
     "eventsource-parser": "^1.1.2",
-    "expo": "~54.0.10",
+    "expo": "54.0.13",
     "expo-audio": "~1.0.13",
     "expo-blur": "~15.0.7",
     "expo-clipboard": "~8.0.7",
     "expo-constants": "~18.0.9",
-    "expo-font": "~14.0.8",
+    "expo-font": "~14.0.9",
     "expo-glass-effect": "~0.1.4",
     "expo-haptics": "~15.0.7",
     "expo-linking": "~8.0.8",
     "expo-network": "~8.0.7",
-    "expo-router": "~6.0.8",
+    "expo-router": "~6.0.11",
     "expo-speech": "~14.0.7",
     "expo-splash-screen": "~31.0.10",
     "expo-sqlite": "~16.0.8",
