--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "expo-haptics": "~15.0.7",
     "expo-linking": "~8.0.8",
     "expo-network": "~8.0.7",
-    "expo-router": "~6.0.11",
+    "expo-router": "~6.0.12",
     "expo-speech": "~14.0.7",
     "expo-splash-screen": "~31.0.10",
     "expo-sqlite": "~16.0.8",
@@ -91,7 +91,7 @@
     "@babel/core": "^7.28.0",
     "@tanstack/eslint-plugin-query": "^5.91.0",
     "@types/better-sqlite3": "7.6.13",
-    "@types/jest": "^30.0.0",
+    "@types/jest": "29.5.14",
     "@types/react": "~19.1.10",
     "JSONStream": "^1.3.5",
     "better-sqlite3": "12.4.1",
@@ -110,5 +110,5 @@
     "wrangler": "^4.42.1"
   },
   "private": true,
-  "packageManager": "yarn@4.10.2"
+  "packageManager": "yarn@4.10.3"
 }
