--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "lint": "expo lint",
     "build": "eas build --platform ios",
     "build:preview": "eas build -p ios --profile preview",
-    "deploy": "tsx scripts/deploy-pages.ts",
-    "deploy:production": "tsx scripts/deploy-pages.ts --production"
+    "deploy": "tsx pages/deploy-pages.ts",
+    "deploy:production": "tsx pages/deploy-pages.ts --production"
   },
   "jest": {
     "preset": "jest-expo"
