--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "db:reset": "tsx scripts/migrate.ts --reset",
     "db:stats": "tsx scripts/migrate.ts --stats",
     "db:verify": "tsx scripts/migrate.ts --verify",
+    "db:generate-readings": "tsx scripts/generate-example-readings.ts",
     "android": "expo run:android",
     "ios": "expo run:ios",
     "web": "expo start --web",
@@ -75,6 +76,7 @@
     "react-native-keyboard-controller": "1.18.5",
     "react-native-markdown-display": "^7.0.2",
     "react-native-mmkv": "^4.0.0",
+    "react-native-nitro-modules": "^0.31.1",
     "react-native-purchases": "^9.5.4",
     "react-native-purchases-ui": "^9.5.4",
     "react-native-reanimated": "~4.1.1",
@@ -90,11 +92,11 @@
   "devDependencies": {
     "@babel/core": "^7.28.0",
     "@tanstack/eslint-plugin-query": "^5.91.0",
-    "@types/better-sqlite3": "7.6.13",
+    "@types/better-sqlite3": "^7.6.13",
     "@types/jest": "29.5.14",
     "@types/react": "~19.1.10",
     "JSONStream": "^1.3.5",
-    "better-sqlite3": "12.4.1",
+    "better-sqlite3": "^12.4.1",
     "csv-parser": "^3.2.0",
     "eslint": "^9.33.0",
     "eslint-config-expo": "~10.0.0",
