--- a/package.json
+++ b/package.json
@@ -39,77 +39,77 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@babel/runtime": "^7.28.4",
-    "@expo/metro-runtime": "^6.1.2",
-    "@expo/ui": "~0.2.0-beta.2",
+    "@babel/runtime": "^7.28.6",
+    "@expo/metro-runtime": "55.0.4-canary-20260128-67ce8d5",
+    "@expo/ui": "~55.0.0-beta.2",
     "@expo/vector-icons": "^15.0.3",
-    "@react-native-ai/apple": "^0.11.0",
+    "@react-native-ai/apple": "^0.12.0",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.4.1",
     "@react-navigation/native": "^7.1.6",
     "@shopify/flash-list": "2.0.2",
-    "@tanstack/react-query": "5.90.12",
-    "ai": "^5.0.112",
+    "@tanstack/react-query": "5.90.20",
+    "ai": "^6.0.67",
     "eventsource-parser": "^1.1.2",
-    "expo": "~54.0.28",
-    "expo-audio": "~1.1.0",
-    "expo-blur": "~15.0.8",
-    "expo-clipboard": "~8.0.8",
-    "expo-constants": "~18.0.11",
-    "expo-font": "~14.0.10",
-    "expo-glass-effect": "~0.1.8",
-    "expo-haptics": "~15.0.8",
-    "expo-linking": "~8.0.10",
-    "expo-network": "~8.0.8",
-    "expo-router": "~6.0.18",
-    "expo-speech": "~14.0.8",
-    "expo-splash-screen": "~31.0.12",
-    "expo-sqlite": "~16.0.10",
-    "expo-status-bar": "~3.0.9",
-    "expo-symbols": "~1.0.8",
-    "expo-system-ui": "~6.0.9",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "react-native": "0.81.5",
-    "react-native-gesture-handler": "~2.28.0",
+    "expo": "55.0.0-canary-20260128-67ce8d5",
+    "expo-audio": "55.0.4-canary-20260128-67ce8d5",
+    "expo-blur": "55.0.4-canary-20260128-67ce8d5",
+    "expo-clipboard": "55.0.4-canary-20260128-67ce8d5",
+    "expo-constants": "55.0.3-canary-20260128-67ce8d5",
+    "expo-font": "55.0.4-canary-20260128-67ce8d5",
+    "expo-glass-effect": "55.0.4-canary-20260128-67ce8d5",
+    "expo-haptics": "55.0.4-canary-20260128-67ce8d5",
+    "expo-linking": "55.0.4-canary-20260128-67ce8d5",
+    "expo-network": "55.0.4-canary-20260128-67ce8d5",
+    "expo-router": "~55.0.0-beta.3",
+    "expo-speech": "55.0.4-canary-20260128-67ce8d5",
+    "expo-splash-screen": "55.0.4-canary-20260128-67ce8d5",
+    "expo-sqlite": "55.0.4-canary-20260128-67ce8d5",
+    "expo-status-bar": "55.0.3-canary-20260128-67ce8d5",
+    "expo-symbols": "55.0.4-canary-20260128-67ce8d5",
+    "expo-system-ui": "55.0.4-canary-20260128-67ce8d5",
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
+    "react-native": "0.83.1",
+    "react-native-gesture-handler": "~2.30.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
-    "react-native-keyboard-controller": "1.18.5",
+    "react-native-keyboard-controller": "1.20.4",
     "react-native-markdown-display": "^7.0.2",
-    "react-native-mmkv": "^4.1.0",
-    "react-native-nitro-modules": "^0.31.10",
-    "react-native-purchases": "^9.6.10",
-    "react-native-purchases-ui": "^9.6.10",
-    "react-native-reanimated": "~4.1.1",
+    "react-native-mmkv": "^4.1.2",
+    "react-native-nitro-modules": "^0.33.2",
+    "react-native-purchases": "^9.7.5",
+    "react-native-purchases-ui": "^9.7.5",
+    "react-native-reanimated": "~4.2.1",
     "react-native-safe-area-context": "~5.6.0",
-    "react-native-screens": "~4.16.0",
+    "react-native-screens": "~4.20.0",
     "react-native-uitextview": "^2.1.1",
     "react-native-url-polyfill": "^2.0.0",
-    "react-native-worklets": "0.5.1",
+    "react-native-worklets": "0.7.2",
     "tiny-segmenter": "^0.2.0",
     "wanakana": "^5.3.1",
-    "zod": "^4.1.13"
+    "zod": "^4.3.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.28.0",
-    "@tanstack/eslint-plugin-query": "^5.91.2",
+    "@babel/core": "^7.28.6",
+    "@tanstack/eslint-plugin-query": "^5.91.4",
     "@types/better-sqlite3": "^7.6.13",
     "@types/jest": "29.5.14",
-    "@types/react": "~19.1.10",
+    "@types/react": "~19.2.2",
     "JSONStream": "^1.3.5",
-    "better-sqlite3": "^12.5.0",
+    "better-sqlite3": "^12.6.2",
     "csv-parser": "^3.2.0",
-    "eslint": "^9.33.0",
-    "eslint-config-expo": "~10.0.0",
+    "eslint": "^9.39.2",
+    "eslint-config-expo": "55.0.1-canary-20260128-67ce8d5",
     "iconv-lite": "^0.6.3",
     "jest": "~29.7.0",
-    "jest-expo": "~54.0.15",
+    "jest-expo": "55.0.0-canary-20260128-67ce8d5",
     "react-test-renderer": "19.1.0",
     "sqlite3": "^5.1.7",
     "ts-jest": "^29.4.1",
     "ts-node": "10.9.2",
     "tsx": "^4.20.3",
-    "typescript": "~5.9.2",
-    "wrangler": "^4.54.0"
+    "typescript": "~5.9.3",
+    "wrangler": "^4.61.1"
   },
   "private": true,
   "packageManager": "yarn@4.10.3"
